# PixelSPoof

./: PROJECT_SUMMARY.md  README.md  REFACTORING_COMPLETION_REPORT.md  ULTIMATE_EFFECTIVENESS_ANALYSIS.md  local.properties.example  logcat_attempt_1.txt  logcat_attempt_2.txt  logcat_attempt_3.txt  logcat_dump.txt  logcat_full.txt  logcat_full2.txt  logcat_hooktest.txt  logcat_interaction.txt  logcat_live.txt  logcat_native_init.txt  logcat_probe.txt  logcat_probe_run1.txt  logcat_systemhooks.txt  run_tests.bat  run_tests.sh
.github/workflows/: android.yml  ci.yml
app/: build.gradle  dictionary.txt
app/src/main/cpp/: CMakeLists.txt  pixelspoofer.cpp
app/src/main/java/com/example/kashi/core/: KernelSUIntegration.kt
app/src/main/java/com/kashi/caimanspoof/: AttestationBypass.kt  ConfigActivity.kt  ConfigManager.kt  ConfigViewModel.kt  DeviceProfile.kt  DeviceProfileManager.kt  ErrorHandler.kt  KernelLevelBypass.kt  KernelSpoofer.kt  LSPosedDiagnostic.kt  MainHook.kt  MainHookRefactored.kt  Metrics.kt  NativeBridge.java  NativeHooking.kt  NetworkInterceptor.kt  NetworkLevelBypass.kt  PerAppConfigManager.kt  PropertyDebugger.kt  PropertySpoofer.kt  SafetyValidator.kt  SpoofingValidator.kt
app/src/main/java/com/kashi/caimanspoof/ui/: DiagnosticsScreen.kt  MainActivity.kt  PerAppConfigScreen.kt
app/src/test/java/com/kashi/caimanspoof/: BehavioralSpoofingTestHarness.kt  PixelSpoofTestSuite.kt
config/detekt/: detekt.yml
gradle/wrapper/: gradle-wrapper.properties
ksu_module/: README.md  module.prop  service.sh  system.prop
